--- a/src/main/resources/templates/machineView.html
+++ b/src/main/resources/templates/machineView.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <h2>Morphle Labs Machine</h2>
     <title>Title</title>
 </head>
 <body>
-<link rel="stylesheet" href="MachineBehaviour.css">
-<script type="text/javascript" src="MachineBehaviour.js"></script>
+<link rel="stylesheet" type="text/css" href="../static/MachineBehaviour.css">
+<script type="text/javascript" src="../static/MachineBehaviour.js"></script>
 <p id="Machine Header">Click the following button to create Machine grid</p>
 <input id="button" type="button" onclick="createGrid()" value="Create Grid">
 <div id="container">
